--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,8 @@
     </script>
     <link href="https://fonts.googleapis.com/css?family=Arvo|Exo+2|Pacifico|Permanent+Marker|Righteous&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">  
+    
     <title>Workoutflow</title>
 </head>
 <body>
