--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -1,154 +1,127 @@
-<!DOCTYPE html>
-<html lang="en">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">WORKOUTFLOW</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cardio">Cardio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/muscle_building">Muscle Building</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/strength_training">Strength Training</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Exo+2|Pacifico|Permanent+Marker|Righteous&display=swap"
-        rel="stylesheet">
-
-    <title>Workoutflow</title>
-</head>
-
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">WORKOUTFLOW</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cardio">Cardio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/muscle_building">Muscle Building</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/strength_training">Strength Training</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="jumbotron jumbotron-fluid bg-transparent">
-                    <div class="container">
-                        <h1 class="display-4">WORKOUTFLOW</h1>
-                        <p class="lead">Ready to get your heart pumping?
-                            <br>
-                            Follow this step by step guide to complete your
-                            cardio workout. Don’t forget hit play on your playlist!</p>
-                        <hr class="my-4">
-                    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="jumbotron jumbotron-fluid bg-transparent">
+                <div class="container">
+                    <h1 class="display-4 animated pulse delay-1s slow	">WORKOUTFLOW</h1>
+                    <p class="lead">Ready to get your heart pumping?
+                        <br>
+                        Follow this step by step guide to complete your
+                        cardio workout. Don’t forget hit play on your playlist!</p>
+                    <hr class="my-4">
                 </div>
             </div>
         </div>
     </div>
+</div>
+</div>
 
-    <div class="container">
-        <div class="row">
-            <!-- to do -->
-            <div class="col-sm-4">    
-                    <div class="card bg-light mb-3" style="width: 23rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Day 1 </h5>
-                                    <ul>
-                                    {{#each crd}}
-                                        {{#if_eq day 1}}
-                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
-                                        {{/if_eq}}
-                                    {{/each}}
-                                    </ul>                          
-                            </div>
-                    </div>
+<div class="container">
+    <div class="row">
+        <!-- to do -->
+        <div class="col-sm-4">
+            <div class="card bg-light mb-3" style="width: 23rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Day 1 </h5>
+                    <ul>
+                        {{#each crd}}
+                        {{#if_eq day 1}}
+                        <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                        {{/if_eq}}
+                        {{/each}}
+                    </ul>
+                </div>
             </div>
-            <div class="col-sm-4">    
-                    <div class="card bg-light mb-3" style="width: 23rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Day 2</h5>
-                                    <ul>
-                                    {{#each crd}}
-                                        {{#if_eq day 2}}
-                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
-                                        {{/if_eq}}
-                                    {{/each}}
-                                    </ul>                         
-                            </div>
-                    </div>
-            </div>
-            <div class="col-sm-4">    
-                    <div class="card bg-light mb-3" style="width: 23rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Day 3</h5>
-                                    <ul>
-                                    {{#each crd}}
-                                        {{#if_eq day 3}}
-                                    <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
-                                        {{/if_eq}}
-                                    {{/each}}
-                                    </ul>                         
-                            </div>
-                    </div>
-            </div>            
         </div>
-     <div class="row">
-          <div class="col-sm-12">
+        <div class="col-sm-4">
+            <div class="card bg-light mb-3" style="width: 23rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Day 2</h5>
+                    <ul>
+                        {{#each crd}}
+                        {{#if_eq day 2}}
+                        <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                        {{/if_eq}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card bg-light mb-3" style="width: 23rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Day 3</h5>
+                    <ul>
+                        {{#each crd}}
+                        {{#if_eq day 3}}
+                        <p> - {{ex_name}} {{body_part}} {{intervals}} </p>
+                        {{/if_eq}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <div class="card bg-light mb-3" style="width: 71rem;">
-              <div class="card-body" id="New">
-                <h2 class="card-title">Insert Your Own Exercise!</h2>
-                <form action="cardioCreate" method="POST">
-                <div class="form-group">
-                  <label for="formGroupExampleInput">Exercise Name</label>
-                  <input type="text" class="form-control" name="ex_name" placeholder="Crunches">
+                <div class="card-body" id="New">
+                    <h2 class="card-title">Insert Your Own Exercise!</h2>
+                    <form action="cardioCreate" method="POST">
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Exercise Name</label>
+                            <input type="text" class="form-control" name="ex_name" placeholder="Crunches">
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Repetition</label>
+                            <input type="text" class="form-control" name="intervals" placeholder="30x">
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Day</label>
+                            <select class="custom-select" name="day">
+                                <option selected>Open to select day of workout</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                            <br>
+                            <button type="submit">Add Exercise</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                  <label for="formGroupExampleInput2">Repetition</label>
-                  <input type="text" class="form-control" name="intervals" placeholder="30x">
-                </div>
-                <div class="form-group">
-                  <label for="formGroupExampleInput2">Day</label>
-                  <select class="custom-select" name="day">
-                    <option selected>Open to select day of workout</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                  </select>
-                  <br>
-                  <button type="submit">Add Exercise</button>
-                </div>
-                </form>
-              </div>
             </div>
             <br><br>
-          </div>
         </div>
-    <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSJHnPb1f0X3" width="1150" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+    <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSJHnPb1f0X3" width="1150" height="380"
+        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 
 <div class="footer">
     <p>&copy; Copyright 2019</p>
 </div>
 <script src="../public/js/index.js"></script>
-</body>
-</html>
