--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,131 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">WORKOUTFLOW</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home<span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cardio">Cardio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/muscle_building">Muscle Building</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/strength_training">Strength Training</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Exo+2|Pacifico|Permanent+Marker|Righteous&display=swap"
-        rel="stylesheet">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="jumbotron bg-transparent">
+                <h1 class="display-4 animated rotateInUpLeft delay-1s">WORKOUTFLOW</h1>
+                <p class="lead">Welcome to the workoutflow community.
+                    <br>
+                    Here you can select a workout plan to follow
+                    and inspire you.</p>
+                <hr class="my-4">
+                <p>Each fitness program comes with a full workout plan and playlist to get you motivated at the gym.
+                    What's your exercise?</p>
 
-    <title>Workoutflow</title>
-</head>
+                <a class="btn btn-info btn-lg" href="/cardio" role="button">Cardio</a>
+                <a class="btn btn-info btn-lg" href="/muscle_building" role="button">Muscle Building</a>
+                <a class="btn btn-info btn-lg" href="/strength_training" role="button">Strength Training</a>
 
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">WORKOUTFLOW</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home<span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cardio">Cardio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/muscle_building">Muscle Building</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/strength_training">Strength Training</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="jumbotron bg-transparent">
-                    <h1 class="display-4">WORKOUTFLOW</h1>
-                    <p class="lead">Welcome to the workoutflow community. 
-                        <br>
-                        Here you can select a workout plan to follow
-                        and inspire you.</p>
-                    <hr class="my-4">
-                    <p>Each fitness program comes with a full workout plan and playlist to get you motivated at the gym.
-                        What's your exercise?</p>
-
-                    <a class="btn btn-info btn-lg" href="/cardio" role="button">Cardio</a>
-                    <a class="btn btn-info btn-lg" href="/muscle_building" role="button">Muscle Building</a>
-                    <a class="btn btn-info btn-lg" href="/strength_training" role="button">Strength Training</a>
-
-                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <a href="/cardio">
-                                <img src="../images/cardio.jpeg" class="d-block w-100" alt="workout">
-                            </a>
-                            <div class="carousel-caption">
-                                <h1>Cardio</h1>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="/muscle_building">
-                                <img src="../images/strengthTraining.jpg" class="d-block w-100" alt="workout">
-                            </a>
-                            <div class="carousel-caption">
-                                <h1>Muscle Building</h1>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="/strength_training">
-                                <img src="../images/Powerlifting.jpg" class="d-block w-100" alt="workout">
-                            </a>
-                            <div class="carousel-caption">
-                                <h1>Strength Training</h1>
-                            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="/cardio">
+                            <img src="../images/cardio.jpeg" class="d-block w-100" alt="workout">
+                        </a>
+                        <div class="carousel-caption">
+                            <h1>Cardio</h1>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    <div class="carousel-item">
+                        <a href="/muscle_building">
+                            <img src="../images/strengthTraining.jpg" class="d-block w-100" alt="workout">
+                        </a>
+                        <div class="carousel-caption">
+                            <h1>Muscle Building</h1>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="/strength_training">
+                            <img src="../images/Powerlifting.jpg" class="d-block w-100" alt="workout">
+                        </a>
+                        <div class="carousel-caption">
+                            <h1>Strength Training</h1>
+                        </div>
+                    </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-        <div class="container">
-            <p><br><br></p>
-        </div>
     </div>
-
-    <div class="footer">
-        <p>&copy; Copyright 2019</p>
+    <div class="container">
+        <p><br><br></p>
     </div>
+</div>
 
-</body>
-
-</html>
+<div class="footer">
+    <p>&copy; Copyright 2019</p>
+</div>
