--- a/views/muscle_building.handlebars
+++ b/views/muscle_building.handlebars
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../styles/styles.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-  <link href="https://fonts.googleapis.com/css?family=Arvo|Exo+2|Pacifico|Permanent+Marker|Righteous&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
-
-  <title>Workoutflow</title>
-</head>
-
-<body>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">WORKOUTFLOW</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,9 +20,9 @@
         </li>
       </ul>
     </div>
-  </nav>
+</nav>
 
-  <div class="container">
+<div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div class="jumbotron jumbotron-fluid" id="jumbotron">
@@ -62,11 +33,12 @@
               Follow this step by step guide to complete your
               muscle building workout. Don’t forget hit play on your playlist!</p>
             <hr class="my-4">
+            <iframe src="https://open.spotify.com/embed/user/12168588908/playlist/4YvhNsxfaBVBOHuBybdS1A" width="1000" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </div>
         </div>
       </div>
     </div>
-  </div>
+</div>
 
 <div class="container">
         <div class="row">
@@ -75,6 +47,7 @@
                     <div class="card bg-light mb-3" style="width: 75rem;">
                             <div class="card-body">
                                 <h4 class="card-title">Day 1: Chest and Triceps</h5>
+                                <img src="../public/images/ChestTris.png" alt="chest and tris" width="50px" height="50px">
                                   <ul>
                                   {{#each mscl}}
                                     {{#if_eq day 1}}
@@ -83,7 +56,7 @@
                                       <form method="POST" action="/muscle_buildingUpdate?_method=PUT" class="button-size">
                                       <input type="hidden" name= "mb_id" type="text"
                                       value={{id}}>
-                                      <button type="submit" class="btn btn-default">COMPLETED!</button>
+                                      <button type="submit" class="btn btn-info">COMPLETED!</button>
                                       </form>
                                     {{/unless}}
                                     {{/if_eq}}
@@ -117,7 +90,7 @@
                                       <form method="POST" action="/muscle_buildingUpdate?_method=PUT" class="button-size">
                                       <input type="hidden" name= "mb_id" type="text"
                                       value={{id}}>
-                                      <button type="submit" class="btn btn-default">COMPLETED!</button>
+                                      <button type="submit" class="btn btn-info">COMPLETED!</button>
                                       </form>
                                     {{/unless}}
                                     {{/if_eq}}
@@ -151,7 +124,7 @@
                                       <form method="POST" action="/muscle_buildingUpdate?_method=PUT" class="button-size">
                                       <input type="hidden" name= "mb_id" type="text"
                                       value={{id}}>
-                                      <button type="submit" class="btn btn-default">COMPLETED!</button>
+                                      <button type="submit" class="btn btn-info">COMPLETED!</button>
                                       </form>
                                     {{/unless}}
                                     {{/if_eq}}
@@ -177,6 +150,7 @@
                     <div class="card bg-light mb-3" style="width: 75rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Day 4: Back, Biceps, and Abs</h5>
+                                <img src="http://musclecharts.net/mc/eJzbY2hAHogHagQAhTMMLg==.png" alt="ssss" style="float: left">
                                   <ul>
                                   {{#each mscl}}
                                     {{#if_eq day 4}}
@@ -185,7 +159,7 @@
                                       <form method="POST" action="/muscle_buildingUpdate?_method=PUT" class="button-size">
                                       <input type="hidden" name= "mb_id" type="text"
                                       value={{id}}>
-                                      <button type="submit" class="btn btn-default">COMPLETED!</button>
+                                      <button type="submit" class="btn btn-info">COMPLETED!</button>
                                       </form>
                                     {{/unless}}
                                     {{/if_eq}}
@@ -217,8 +191,12 @@
                   <input type="text" class="form-control" name="ex_name" placeholder="Bench Press">
                 </div>
                 <div class="form-group">
+                  <label for="formGroupExampleInput">Body Part</label>
+                  <input type="text" class="form-control" name="body_part" placeholder="Chest and Triceps">
+                </div>
+                <div class="form-group">
                   <label for="formGroupExampleInput2">Sets/Reps</label>
-                  <input type="text" class="form-control" name="intervals" placeholder="3x10">
+                  <input type="text" class="form-control" name="intervals" placeholder="3 x 10">
                 </div>
                 <div class="form-group">
                   <label for="formGroupExampleInput2">Day</label>
@@ -238,11 +216,9 @@
             <br><br>
           </div>
         </div>
-        <iframe src="https://open.spotify.com/embed/user/12168588908/playlist/4YvhNsxfaBVBOHuBybdS1A" width="1150" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <div class="footer">
   <p>&copy; Copyright 2019</p>
 </div>
 <script src="../public/js/index.js"></script>
-</body>
-</html>
+
