added images to muscle building page. Changed jumbotron styling for all pages, moved the spotify playlist

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -39,7 +39,10 @@ body {
   flex-direction: row;
   margin-bottom: 20px;
 }
-
+.insert{
+  display: block;
+  margin-bottom: 50px;
+}
 /* #footer {
 background-color: antiquewhite;
 width: auto;
