--- a/views/cardio.handlebars
+++ b/views/cardio.handlebars
@@ -25,14 +25,16 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <div class="jumbotron jumbotron-fluid bg-transparent">
+            <div class="jumbotron jumbotron-fluid" id="jumbotron">
                 <div class="container">
-                    <h1 class="display-4 animated pulse delay-1s slow	">WORKOUTFLOW</h1>
+                    <h1 class="display-4 animated pulse delay-1s slow	">CARDIO</h1>
                     <p class="lead">Ready to get your heart pumping?
                         <br>
                         Follow this step by step guide to complete your
                         cardio workout. Don’t forget hit play on your playlist!</p>
                     <hr class="my-4">
+                     <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSJHnPb1f0X3" width="1000" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
@@ -117,8 +119,6 @@
             <br><br>
         </div>
     </div>
-    <iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSJHnPb1f0X3" width="1150" height="380"
-        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 
 <div class="footer">
