--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,7 +25,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <div class="jumbotron bg-transparent">
+            <div class="jumbotron jumbotron-fluid" id="jumbotron">
                 <h1 class="display-4 animated rotateInUpLeft delay-1s">WORKOUTFLOW</h1>
                 <p class="lead">Welcome to the workoutflow community.
                     <br>
